c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/subscript_non_ptr.c
int main(void) {
    int a = 3;
    // one operand in a subscript operation must be a pointer
    return a[4];
}